# find-my-customer

./: .dockerignore  .gitattributes  .gitignore  .npmignore  LICENSE  README.md  package.json  pyproject.toml
.codex/: deployment-surface.json
.github/workflows/: ci.yml  release.yml
deploy/: Dockerfile  README.md  compose.yml  env.example
examples/: analysis.example.json
find-first-customers/: SKILL.md
find-first-customers/agents/: openai.yaml
find-first-customers/assets/: report.css
find-first-customers/references/: report-contract.md  report.schema.json  research-framework.md  source-playbooks.md
find-first-customers/scripts/: generate_report.py  report_model.py  validate_report.py
scripts/: install.js
src/find_my_customer/: __init__.py  config.py  database.py  models.py  prompt.py  provider.py  repository.py  security.py  skill_runtime.py  web.py  worker.py
src/find_my_customer/static/: portal.css  portal.js
src/find_my_customer/templates/: base.html  dashboard.html  legal.html  login.html  run.html
tests/: test_auth.py  test_generate_report.py  test_installer.py  test_portal.py  test_prompt.py  test_provider.py  test_report_model.py
